--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -23,7 +23,7 @@
     %\affaddr{12345 Musterstadt}\\
     \email{lukas.essig@studium.fernuni-hagen.de}
   \alignauthor Peter Müller\\
-    \email{peter.müller@stuidum.fernuni-hagen.de}
+    \email{peter.müller@studium.fernuni-hagen.de}
 }
 
 \maketitle
