Formatierung erstellt und Literaturverzeichnis begonnen

--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -7,6 +7,21 @@
 
 %% Saved with string encoding Westeuropäisch (Windows Latin 1) 
 
+@misc{mingo,
+	author = {Moln\'{a}r, I.},
+	title = {This is the CFS scheduler},
+	howpublished = {\url{http://people.redhat.com/mingo/cfs-scheduler/sched-design-CFS.txt}},
+	month = {05},
+	year = {2007},
+	}
+
+@misc{mjones,
+	author = {Jones, M.},
+	title = {Inside the Linux 2.6 Completely Fair Scheduler},
+	howpublished = {\url{https://www.ibm.com/developerworks/library/l-completely-fair-scheduler/}},
+	month = {12},
+	year = {2009},
+	}
 
 
 @article{Ivory2001,
@@ -20,11 +35,7 @@
 	Volume = {33},
 	Year = {2001}}
 
-@misc{acmcategories,
-	Date-Modified = {2012-04-23 14:35:10 +0200},
-	Howpublished = {\url{http://www.acm.org/class/how_to_use.html}},
-	Title = {How to Classify Works Using {ACM}'s Computing Classification System}}
-
+	
 @inproceedings{Black1988,
 	Acmid = {69220},
 	Author = {Black, David L. and Golub, David B. and Hauth, Karl and Tevanian, Avadis and Sanzi, Richard},
