--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -37,58 +37,15 @@
 \section{Einleitung}
 
 Das Gummibärchen war schon immer ein Quell der Freude für Jung
-und Alt, vgl. \cite{acmcategories,Ivory2001}.
+und Alt, vgl. \cite{mingo,mjones,Ivory2001,Black1988}.
 
-\section{Und Erwachsene ebenso?}
+\section{Theorie}
 
-Das ist die Frage, die interessanterweise bereits
-im 19.~Jahrhundert aufgeworfen wurde~\cite[S.~237f]{Ivory2001}.
+\subsection{Scheduling}
 
-In \cref{niko} sehen wir ein Beispiel.
+\subsection{ROT-SCHWARZ-Baum}
 
-\begin{figure}[hp]
-\begin{center}
-\unitlength8mm % heir skalieren, falls gewünscht
-\begin{picture}(4,6)
-%außen
-\put(0,0){\line(1,0){4}}
-\put(4,0){\line(0,1){4}}
-\put(4,4){\line(-1,1){2}}
-\put(2,6){\line(-1,-1){2}}
-\put(0,4){\line(0,-1){4}}
-%innen
-\put(0,0){\line(1,1){4}}
-\put(4,4){\line(-1,0){4}}
-\put(0,4){\line(1,-1){4}}
-\end{picture}
-\end{center}
-\caption{Das Haus des Nikolaus in seiner ersten, ursprünglichen Form,
-         siehe auch~\protect\cite[S.~93]{Ivory2001}.}
-\label{niko}
-\end{figure}
-
-Und in \cref{tttabelle} ist das Ganze tabellarisch dargestellt.
-
-\begin{table}[hp]\large
-\begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
-Material & Tierart & essbar\\
-\hline
-Gummi & Bär & ja\\
-\hline
-\end{tabular}
-\end{center}
-\caption{Eine Übersicht zu den Fachbegriffen.}
-\label{tttabelle}
-\end{table}
-
-\section{Zusammenfassung}
-In dieser Abhandlung wurde die Geschichte neu interpretiert.
-Es ergaben sich völlig neuartige Forschungsansätze, die so
-vielfältig sind, dass sich die Auswirkungen gegen\-wärtig %Trennhilfe \-
-kaum abschätzen lassen. Auch Artikel mit vielen Autoren~\cite{Black1988}
-befassen sich mit diesem Thema.
+\section{Der Completely-Fair-Scheduler}
 
 % Eine neue Spalte anfangen mit
 \pagebreak
