--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -12,7 +12,7 @@
 	title = {This is the CFS scheduler},
 	howpublished = {\url{http://people.redhat.com/mingo/cfs-scheduler/sched-design-CFS.txt}},
 	month = {05},
-	year = {2007},
+	year = {2007}
 	}
 
 @misc{mjones,
@@ -20,35 +20,20 @@
 	title = {Inside the Linux 2.6 Completely Fair Scheduler},
 	howpublished = {\url{https://www.ibm.com/developerworks/library/l-completely-fair-scheduler/}},
 	month = {12},
-	year = {2009},
+	year = {2009}
 	}
 
+@misc{rtoal,
+	author = {Ray Toal},
+	title = {Red Black Trees},
+	howpublished = {\url{http://cs.lmu.edu/~ray/notes/redblacktrees/}},
+}
 
-@article{Ivory2001,
-	Author = {Melody Y. Ivory and Marti A. Hearst},
-	Date-Added = {2012-04-23 14:02:59 +0200},
-	Date-Modified = {2012-04-23 14:10:20 +0200},
-	Journal = {ACM Computing Surveys},
-	Number = {4},
-	Pages = {470--516},
-	Title = {The State of the Art in Automating Usability Evaluation of User Interfaces},
-	Volume = {33},
-	Year = {2001}}
-
-	
-@inproceedings{Black1988,
-	Acmid = {69220},
-	Author = {Black, David L. and Golub, David B. and Hauth, Karl and Tevanian, Avadis and Sanzi, Richard},
-	Booktitle = {Proceedings of the 1988 ACM SIGPLAN and SIGOPS workshop on Parallel and distributed debugging},
-	Date-Modified = {2013-06-14 08:08:30 +0000},
-	Doi = {10.1145/68210.69220},
-	Isbn = {0-89791-296-9},
-	Location = {Madison, Wisconsin, USA},
-	Numpages = {12},
-	Pages = {45--56},
-	Series = {PADD '88},
-	Title = {The {Mach} Exception Handling Facility},
-	Url = {http://doi.acm.org/10.1145/68210.69220},
-	Year = {1988},
-	Bdsk-Url-1 = {http://doi.acm.org/10.1145/68210.69220},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1145/68210.69220}}
+@book{tcormen,
+	author = {Thomas H. Cormen, Charles E. Leiserson},
+	title = {Algorithmen - Eine Einf{\"u}hrung},
+	publisher = {Oldenbourg Wissenschaftsverlag GmbH},
+	year = {2013},
+	isbn = {978-3-486-74861-1},
+	note = {{ISBN:} 978-3-486-74861-1}
+}
