removed wrong picture

--- a/latex/sections/rb_tree.tex
+++ b/latex/sections/rb_tree.tex
@@ -19,7 +19,7 @@ Der Rot-Schwarz-Baum erweitert einen Binär-Baum mit Hilfe eines Farbattributs f
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.45\textwidth]{pictures/redblacktree1.png}
+	\includegraphics[width=0.45\textwidth]{pictures/redblacktree.png}
 	\caption{RED-BLACK-TREE~\protect\cite{rtoal}}
 	\label{fig:rbtree}
 \end{figure}
