--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -37,3 +37,37 @@
 	isbn = {978-3-486-74861-1},
 	note = {{ISBN:} 978-3-486-74861-1}
 }
+
+@book{mpinedo,
+	location = {New York},
+	edition = {4th ed},
+	title = {Scheduling: theory, algorithms, and systems},
+	publisher = {Springer},
+	author = {Pinedo, Michael},
+	year = {2012},
+}
+
+@book{aagnetis,
+	author = {Agnetis, Alessandro},
+	title = {Multiagent Scheduling},
+	year = {2014},
+	publisher={Springer},
+	location={Berlin/Heidelberg},
+}
+
+@book{asilberschatz,
+	author = {Silberschatz, Ari},
+	title = {Operating System Concepts},
+	year = {2009},
+	publisher={Wiley},
+	location={USA},
+}
+
+@book{rlove,
+ author = {Love, Robert},
+ title = {Linux Kernel Development},
+ year = {2010},
+ isbn = {0672329468, 9780672329463},
+ edition = {3rd},
+ publisher = {Addison-Wesley Professional},
+} 
