--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -45,10 +45,14 @@ und Alt, vgl. \cite{mingo,mjones}.
 
 
 \section{Der Completely-Fair-Scheduler}
+@peter
 \subsection{Grundlegender Aufbau}
+@peter
+@lukas: erweiterung scheduling-gruppen nachschlagen
 \subsection{Vergleich zum O(1)-Scheduler}
-\subsection{c-Strukturen}
-
+@lukas
+\subsection{C-Strukturen}
+@lukas
 \section{Zusammenfassung}
 
 % Eine neue Spalte anfangen mit
