--- a/latex/sections/scheduling.tex
+++ b/latex/sections/scheduling.tex
@@ -1,4 +1,4 @@
-\section{Scheduling}\label{s:scheduling}
+\subsection{Scheduling}\label{s:scheduling}
 In der Fachliteratur wird der Begriff Scheduling mit zwar unterschiedlichen Begriffen, jedoch gleicher Bedeutung definiert. Michael Pinedo definiert Scheduling in seinem Werk \cite{mpinedo} folgendermaßen:
 \begin{quote}
 \textit{"`Scheduling is a decision-making process [...]. It deals with the allocation of resources to tasks over given time periods and its goal is to optimize one ore more objectives."'}
