--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -40,14 +40,13 @@ und Alt, vgl. \cite{mingo,mjones}.
 
 \section{Grundlagen zum Scheduling}
 \input{sections/scheduling}
-%rot-schwarz Baum
 \input{sections/rb_tree}
-
+\input{sections/cf_principe}
 
 \section{Der Completely-Fair-Scheduler}
-@peter
 \subsection{Grundlegender Aufbau}
-@peter
+\input{sections/aufbau}
+
 @lukas: erweiterung scheduling-gruppen nachschlagen
 \subsection{Vergleich zum O(1)-Scheduler}
 @lukas
