--- a/latex/sections/rb_tree.tex
+++ b/latex/sections/rb_tree.tex
@@ -39,3 +39,10 @@ Nach \cite[S.311]{tcormen} müssen folgende Regeln für den Rot-Schwarz-Baum ein
 Beim Einfügen bzw. Löschen im binäre Baum werden Verbindungen oder Blätter/Knoten verändert. Damit gerät der Baum immer mehr ins Ungleichgewicht. 
 
 Mit den Regeln von RED-BLACK wird mit Hilfe von z.B. Rotationen um das den Parent Knoten, immer für das richtige Gleichgewicht gesorgt.
+\newline
+\newline
+\newline
+PROTOTYPE: WIRD NOCH ERWEITERT
+\newline
+\newline
+\newline
