--- a/latex/Gliederung.tex
+++ b/latex/Gliederung.tex
@@ -12,7 +12,7 @@ Entwurf für Gliederung
 		https://www.ibm.com/developerworks/library/l-completely-fair-scheduler/
 
 2. Grundlagen zum Scheduling
-2.1  Scheduling
+2.1 Scheduling
 	Definition
 	Ziele,Kriterien, die ein "guter" Scheduler Erfüllen muss
 
@@ -29,17 +29,18 @@ Entwurf für Gliederung
 
 	Kurt Mehlhorn: Datenstrukturen und effiziente Algorithmen. Teubner Stuttgart 1988, ISBN 3-519-12255-3.
 
+2.3 Completely-Fair Prinzip
+	Vergessen Sie bitte nicht zu definieren, was „completely-Fair“ bedeutet, siehe auch die Definition von perfect fairness im Artike
+
 3. Der Completely-Fair-Scheduler
   	3.1 Grundlegender Aufbau / Internas
 		Elementar: virtual runtime
+			Definieren Sie bitte auch „virtual runtime“
 		Priorities (wie werden Sie genutzt)
 		Group Scheduling (Erweiterung)
 		Scheduling-Classes
-		Vergessen Sie bitte nicht zu definieren, was „completely-Fair“ bedeutet, siehe auch die Definition von perfect fairness im Artikel
 		
 		www.pi6.fernuni-hagen.de/downloads/OS/Scheduling/nvz-vtrrp-01.pdf
-		
-		Definieren Sie bitte auch „virtual runtime“
 	
 	3.2 Vergleich zum Vorgänger O(1) (hinsichtlich O-Notation,Arbeitsweise)
 	3.3 C-Strukturen / Darstellung der C-Strukturen in Verbindung mit dem Rot-Schwarz-Baum
