--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -30,7 +30,7 @@
 \abstract{Die Geschichte der Gummi\-bär\-chen ist voller
 Über\-raschun\-gen\ldots} % Trennhilfe \- manchmal nützlich
 
-\keywords{CFS, Rot-Schwarz-Baum, Scheduling}
+\keywords{Linux, CFS, Rot-Schwarz-Baum, Scheduling, completely fair}
 
 % Section-Überschriften werden in GROSSBUCHSTABEN umgestellt
 \section{Einleitung}
