scheduling theorie umgeschrieben + c-strukturen angefangen

--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -11,6 +11,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{listings}
 
 \begin{document}
 
@@ -43,14 +44,11 @@ und Alt, vgl. \cite{mingo,mjones}.
 \input{sections/rb_tree}
 \input{sections/cf_principe}
 
-\section{Der Completely-Fair-Scheduler}
+\section{Der Completely-Fair-Scheduler}\label{s:cfsmain}
 \input{sections/aufbau}
+\input{sections/c_structs}
+\input{sections/comp_to_O1}
 
-@lukas: erweiterung scheduling-gruppen nachschlagen
-\subsection{Vergleich zum O(1)-Scheduler}
-@lukas
-\subsection{C-Strukturen}
-@lukas
 \section{Zusammenfassung}
 
 % Eine neue Spalte anfangen mit
