--- a/latex/sections/cf_principe.tex
+++ b/latex/sections/cf_principe.tex
@@ -1,4 +1,4 @@
-\subsection{Das \glqq Completely-Fair\grqq{} Prinzip}
+\subsection{Das \glqq Completely-Fair\grqq{} Prinzip}\label{s:fair}
 Die wichtigste Aufgabe eines Schedulers ist die Verteilung von knappen Ressourcen unter Menge von Klienten. 
 Um dies zu realisieren, wurden bereits viele Anwendungen in Theorie und Praxis entwickelt.
 Eine sehr bekannte Entwicklung beruht auf der Idee, jedem Klienten ein eigenes Gewicht zu zuweisen, welche dann je nach Höhe zum Gebrauch der begrenzten Ressource berechtigt.
