--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -42,6 +42,7 @@ und Alt, vgl. \cite{mingo,mjones}.
 \input{sections/scheduling}
 \input{sections/rb_tree}
 \input{sections/cf_principe}
+\input{sections/parameters}
 
 \section{Der Completely-Fair-Scheduler}
 \input{sections/aufbau}
